RESOLVED FIXED24361
REGRESSION(r41379-TOT): clicking a generated content block does not trigger a click for the node
https://bugs.webkit.org/show_bug.cgi?id=24361
Summary REGRESSION(r41379-TOT): clicking a generated content block does not trigger a...
Timothy Hatcher
Reported 2009-03-04 10:41:52 PST
Clicking a generated content block does not trigger a click for the node it hangs off of. See attached test case. This has broken some disclosure triangles in the Web Inspector.
Attachments
Test Case (316 bytes, text/html)
2009-03-04 10:42 PST, Timothy Hatcher
no flags
Patch, testcase, changelog (6.13 KB, patch)
2009-03-04 11:50 PST, Simon Fraser (smfr)
hyatt: review+
Timothy Hatcher
Comment 1 2009-03-04 10:42:09 PST
Created attachment 28274 [details] Test Case
Simon Fraser (smfr)
Comment 2 2009-03-04 11:28:23 PST
I see the problem.
Simon Fraser (smfr)
Comment 3 2009-03-04 11:50:29 PST
Created attachment 28277 [details] Patch, testcase, changelog
Dave Hyatt
Comment 4 2009-03-04 11:53:26 PST
Comment on attachment 28277 [details] Patch, testcase, changelog r=me
Darin Adler
Comment 5 2009-03-04 11:55:03 PST
Comment on attachment 28277 [details] Patch, testcase, changelog We normally use early return for functions like this.
Simon Fraser (smfr)
Comment 6 2009-03-04 11:59:10 PST
Note You need to log in before you can comment on or make changes to this bug.