2009-03-04  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dave Hyatt

        https://bugs.webkit.org/show_bug.cgi?id=24361

        Reinstate code that sets result.innerNode when hitTest() returns true,
        but never filled in the innerNode. Fixes hit testing of generated content.

        Test: fast/css-generated-content/hit-test-generated-content.html

        * rendering/RenderLayer.cpp:
        (WebCore::RenderLayer::hitTestContents):

Canonical link: https://commits.webkit.org/33497@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@41427 268f45cc-cd09-0410-ab3c-d52691b4dbfc